feat: patch endpoint to update user (#126)
