# src/routes/users.rs
@@ -1,9 +1,9 @@
 use crate::errors::AppError;
 use crate::models::user::Claims;
-use crate::models::user::{Login, Register};
+use crate::models::user::{CreateUser, Login, UpdateUser};
 use crate::repositories::user_repository::UserRepository;
 use crate::utils::AppState;
-use actix_web::{get, post, web, HttpResponse, Responder};
+use actix_web::{get, post, patch, web, HttpResponse, Responder};
 use slog::{info, o};
 
 #[post("/login")]
@@ -25,7 +25,7 @@ async fn login(
 #[post("/register")]
 async fn register(
     state: web::Data<AppState>,
-    user: web::Json<Register>,
+    user: web::Json<CreateUser>,
 ) -> Result<impl Responder, AppError> {
     let logger = state.logger.new(o!("handler" => "POST /register"));
     info!(logger, "Registering new user");
@@ -54,19 +54,21 @@ async fn get_user_information(
     result.map(|user| HttpResponse::Ok().json(user))
 }
 
-#[post("/me")]
+#[patch("/me")]
 async fn update_user_information(
     state: web::Data<AppState>,
     claims: Claims,
+    user: web::Json<UpdateUser>,
 ) -> Result<impl Responder, AppError> {
-    // TODO(egilsster): Implement updating user
-    let logger = state.logger.new(o!("handler" => "POST /me"));
+    let logger = state.logger.new(o!("handler" => "PATCH /me"));
     info!(logger, "Updating information about logged in user");
     let user_repo = UserRepository {
         mongo_client: state.mongo_client.clone(),
     };
 
-    let result = user_repo.user_information(claims.sub.to_owned()).await;
+    let result = user_repo
+        .update_user_with_email(claims.sub.to_owned(), user.into_inner())
+        .await;
 
     result.map(|user| HttpResponse::Ok().json(user))
 }
